== CHANGES ==

  - fixes issue #20: accuracy of sqrRev, coshRev
  - fixes problems with atan2

0.1.3
  - refactoring backend / flavor
  - implemented recommendation #17: members of overlapping_state
  - fixes issue #16: accuracy of dot product
  - fixes issue #15: decorations of cancel_plus and cancel_minus
  - fixes issue #14: atan2([-y,0],[-x,0])
  - fixes issue #13: decorations of pow
  - fixes reopened issue #8: exponent field required for hex literals
  - fixes reopened issue #9: problem with signed uncertain form

0.1.2
  - fixes issues #6, #8, #9: problems with text to interval
  - fixes issue #7: decoration of sign- and rounding-functions
  - fixes issue #10: is_common on decorated intervals must ignore decoration

0.1.1
  - ODR problems fixed
  - inlined two_sum
  